--- a/index.html
+++ b/index.html
@@ -4,9 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Andrea Beltramin">
-    <title>html-css-booleaner</title>   
+    <title>html-css-booleaner</title>  
+    <link rel="stylesheet" href="./css/style.css"> 
 </head>
 <body>
-    
+    <header class="page.header>
+        <img src="./img/logo.svg" alt="logo booleaner" class="logo-pic">
+    </header>
+    <main>
+        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+        <h2>Scritto da The Booleaner</h2>
+        <h3>il 10/10/2020</h3>
+        <p>
+            <img src="./img/tim-1.jpg" alt="Tim1" class="tim1">
+            <img src="./img/tim-2.jpg" alt="Tim2" class="tim2">   
+        </p>
+        <p>1st Photo: John S. and James L., Knight Foundation, by Scott Henrichsen</p>
+        <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, <mark> molestias qui perspiciatis reiciendis doloribus corporis aliquam saepe consequuntur deleniti omnis error nihil, dolore animi sequi delectus magni, quibusdam eligendi.</mark>
+            Impedit veritatis consectetur rerum, placeat animi atque harum repellat laborum quisquam, voluptas veniam asperiores voluptatibus error vel obcaecati reprehenderit ab hic saepe delectus. Pariatur praesentium eos eligendi vero nulla reprehenderit.
+            Saepe tempore aliquid, vero eveniet porro asperiores ducimus itaque perferendis non maxime qui adipisci? Provident eligendi minima ab voluptatibus rem recusandae, necessitatibus magnam. Eum, error nostrum aliquam at soluta eveniet.
+            Neque soluta maiores blanditiis cum incidunt eos, nesciunt atque et cumque. Sed perferendis id, minus illo cum aliquam ea rem autem, culpa tenetur exercitationem quasi nam mollitia sequi at officia!
+            <ul>
+                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam ratione in corporis ullam, repellendus nemo dolor assumenda officia ut vel molestias commodi molestiae, deleniti consequatur suscipit illo natus quibusdam. Autem?</li>
+                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed dolores commodi asperiores quam id quasi laborum sint rem ullam porro sit, architecto hic, nostrum earum. Consequatur, assumenda. Necessitatibus, esse facere!</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae cumque est vitae et sequi doloribus natus omnis quisquam illo, perferendis placeat mollitia. Quod, perspiciatis eos soluta atque quae vel iusto.</li>
+             </ul>
+        </p>
+        <table>
+            <thead>
+                <tr>
+                    <th>Lorem, ipsum dolor.</th>
+                    <th>Lorem, ipsum dolor.</th>
+                    <th>Lorem, ipsum dolor.</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo cum natus dolor</td>
+                </tr>
+                <tr>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, esse!</td>
+                </tr>
+                 <tr>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, culpa?</td>
+                 </tr>   
+            </tbody>
+        </table>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium laboriosam est nemo. Ducimus recusandae debitis cumque quisquam omnis odit nobis assumenda pariatur dicta modi quaerat, incidunt quasi minima nihil optio?
+            At saepe, porro obcaecati molestias delectus distinctio cum? Dicta, repudiandae consequuntur ut natus eligendi neque, velit reprehenderit dolore enim asperiores molestiae. Laborum dolorem nostrum mollitia in corrupti itaque tenetur expedita.
+            Velit necessitatibus ipsam, ea nam ducimus delectus  sed? <mark>Ducimus animi culpa tempora. Placeat eligendi rerum dolor cum repellat, ab voluptatibus tempora sapiente maiores error veniam aliquid ipsa quisquam aut.</mark>
+            Labore dicta tenetur praesentium doloremque ducimus, laudantium optio mollitia illum consectetur voluptatem voluptates nihil blanditiis iure officia dolor eveniet quia eligendi iste doloribus, nobis incidunt vero quidem aliquid! Repellendus, odio!
+            Voluptas eaque blanditiis dolor, sequi ullam voluptatem id porro cupiditate animi ipsum, praesentium incidunt, harum maiores. Tenetur inventore velit unde maxime eligendi explicabo architecto voluptas. Labore repudiandae eius voluptates recusandae!
+        </p>
+    </main> 
+    <footer> <!--linl utili-->
+        <h2>Potrebbero interessarti</h2>
+        <img src="./img/monitor.jpg" alt="monitor">
+        <img src="./img/graph.jpg" alt="grafico">
+    </footer>
 </body>
 </html>
