--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </header>
    
     <main>
-        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-        <h2>Scritto da The Booleaner</h2>
-        <h3>il 10/10/2020</h3>
-        <p>
+        <h1 class="titolo">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+        <h2 class="sottotitolo">Scritto da The Booleaner</h2>
+        <h3 class="data">il 10/10/2020</h3>
+        <p class="foto">
             <img src="./img/tim-1.jpg" alt="Tim1" class="tim1">
             <img src="./img/tim-2.jpg" alt="Tim2" class="tim2">   
         </p>
