--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <img src="./img/tim-1.jpg" alt="Tim1" class="tim1">
             <img src="./img/tim-2.jpg" alt="Tim2" class="tim2">   
         </p>
-        <p>1st Photo: John S. and James L., Knight Foundation, by Scott Henrichsen</p>
-        <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+        <p class="paragrafo-foto1">1st Photo: John S. and James L., Knight Foundation, by Scott Henrichsen</p>
+        <p class="paragrafo-foto2">2nd Photo: Wikimedia, by Paul Clarke</p>
         
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, <mark> molestias qui perspiciatis reiciendis doloribus corporis aliquam saepe consequuntur deleniti omnis error nihil, dolore animi sequi delectus magni, quibusdam eligendi.</mark>
             Impedit veritatis consectetur rerum, placeat animi atque harum repellat laborum quisquam, voluptas veniam asperiores voluptatibus error vel obcaecati reprehenderit ab hic saepe delectus. Pariatur praesentium eos eligendi vero nulla reprehenderit.
