--- a/index.html
+++ b/index.html
@@ -28,21 +28,24 @@
             Impedit veritatis consectetur rerum, placeat animi atque harum repellat laborum quisquam, voluptas veniam asperiores voluptatibus error vel obcaecati reprehenderit ab hic saepe delectus. Pariatur praesentium eos eligendi vero nulla reprehenderit.
             Saepe tempore aliquid, vero eveniet porro asperiores ducimus itaque perferendis non maxime qui adipisci? Provident eligendi minima ab voluptatibus rem recusandae, necessitatibus magnam. Eum, error nostrum aliquam at soluta eveniet.
             Neque soluta maiores blanditiis cum incidunt eos, nesciunt atque et cumque. Sed perferendis id, minus illo cum aliquam ea rem autem, culpa tenetur exercitationem quasi nam mollitia sequi at officia!
+        </p> 
+        <div class="lista">
             <ul>
                 <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam ratione in corporis ullam, repellendus nemo dolor assumenda officia ut vel molestias commodi molestiae, deleniti consequatur suscipit illo natus quibusdam. Autem?</li>
                 <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed dolores commodi asperiores quam id quasi laborum sint rem ullam porro sit, architecto hic, nostrum earum. Consequatur, assumenda. Necessitatibus, esse facere!</li>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae cumque est vitae et sequi doloribus natus omnis quisquam illo, perferendis placeat mollitia. Quod, perspiciatis eos soluta atque quae vel iusto.</li>
-             </ul>
-        </p>
+            </ul>   
+        </div>
+        
         <table>
             <thead>
-                <tr>
+                <tr class="riga1tabella">
                     <th>Lorem, ipsum dolor.</th>
                     <th>Lorem, ipsum dolor.</th>
                     <th>Lorem, ipsum dolor.</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="corpo-tabella">
                 <tr>
                     <td>Lorem, ipsum dolor.</td>
                     <td>Lorem, ipsum dolor.</td>
@@ -68,8 +71,8 @@
             Voluptas eaque blanditiis dolor, sequi ullam voluptatem id porro cupiditate animi ipsum, praesentium incidunt, harum maiores. Tenetur inventore velit unde maxime eligendi explicabo architecto voluptas. Labore repudiandae eius voluptates recusandae!
         </p>
     </main> 
-    <footer> <!--linl utili-->
-        <h2>Potrebbero interessarti</h2>
+    <footer> <!--link utili-->
+        <h3 class="titolo-footer">Potrebbero interessarti</h3>
         <img src="./img/monitor.jpg" alt="monitor">
         <img src="./img/graph.jpg" alt="grafico">
     </footer>
