fix foto footer

--- a/index.html
+++ b/index.html
@@ -73,8 +73,14 @@
     </main> 
     <footer> <!--link utili-->
         <h3 class="titolo-footer">Potrebbero interessarti</h3>
-        <img src="./img/monitor.jpg" alt="monitor">
-        <img src="./img/graph.jpg" alt="grafico">
+        <div class="foto-footer">
+            <img class="immagine-footer" src="./img/monitor.jpg" alt="monitor">
+            <h3 class="descrizione-foto1">Lorem, ipsum dolor.</h3>
+        </div>
+        <div>
+            <img src="./img/graph.jpg" alt="grafico">
+            <h3 class="descrizione-foto2">Lorem, ipsum dolor.</h3>
+        </div> 
     </footer>
 </body>
 </html>
