--- a/index.html
+++ b/index.html
@@ -81,14 +81,12 @@
             </p>
         </main> 
         <footer> <!--link utili-->
-            <h3 class="titolo-footer">Potrebbero interessarti</h3>
-            <div class="foto-footer">
-                <img class="immagine-footer" src="./img/monitor.jpg" alt="monitor">
-                <h3 class="descrizione-foto1">Lorem, ipsum dolor.</h3>
+            <h3>Potrebbero interessarti</h3>
+            <div class="foto-monitor">
+                Lorem, ipsum dolor.
             </div>
-            <div>
-                <img src="./img/graph.jpg" alt="grafico">
-                <h3 class="descrizione-foto2">Lorem, ipsum dolor.</h3>
+            <div class="foto-grafico">
+                Lorem, ipsum dolor.
             </div> 
         </footer>
     </div>
